# cobalt_lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: promo.cobalt
scripts/: demo.sh  heavy-test.sh  run-llvm-tests.sh
src/: ast.rs  cli.rs  codegen.rs  diagnostics.rs  lexer.rs  main.rs  parser.rs  ty.rs
