[package]
name = "cobalt_lang"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
chumsky = "0.9"
inkwell = { version = "0.4", optional = true }
ariadne = "0.1"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
default = []
llvm = ["inkwell"]
